added basic code

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <title>Natours | Exciting tours for adventurous people</title>
   </head>
   <body>
-    hello
+    <header class="header">
+      some text
+    </header>
   </body>
 </html>
